--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -14,4 +14,9 @@
             android:title="@string/pesan"
             app:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/btn_cek_sales"
+        android:title="@string/cek_total_sales"
+        app:showAsAction="never"/>
+
 </menu>
