--- a/app/src/main/res/layout/content_view.xml
+++ b/app/src/main/res/layout/content_view.xml
@@ -1,100 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="193dp"
-    android:layout_height="277dp"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="10dp">
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="232dp"
-            android:padding="8dp"
-            android:layout_marginBottom="5dp"
-            android:orientation="vertical">
-
-        <ImageView
-                android:layout_marginTop="5dp"
-                android:id="@+id/img_food"
-                android:layout_width="match_parent"
-                android:layout_height="121dp"/>
-
-        <TextView
-                android:id="@+id/tv_name_food"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
-                android:gravity="center"/>
-
-        <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
-                app:cardBackgroundColor="#8e8e8e"
-                app:cardCornerRadius="10dp">
-
-            <TextView
-                    android:id="@+id/tv_price_food"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#ffff"
-                    android:textSize="18sp"
-                    android:gravity="center"/>
-
-        </android.support.v7.widget.CardView>
-
-    </LinearLayout>
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="15dp">
 
     <RelativeLayout
-            android:id="@+id/layout_pesan"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_margin="10dp"
-            android:layout_gravity="bottom">
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:orientation="horizontal">
 
         <ImageView
-                android:id="@+id/btn_minus"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:src="@drawable/ic_remove_circle"/>
+                android:id="@+id/img_food"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:src="@drawable/nasgor_ayam"/>
 
-        <TextView
-                android:id="@+id/tv_jumlah"
-                android:layout_width="wrap_content"
+        <LinearLayout
+                android:layout_width="210dp"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
-                android:textColor="@android:color/black"
-                android:textStyle="italic"
-                android:layout_centerInParent="true"/>
+                android:orientation="vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@id/img_food">
 
-        <ImageView
-                android:id="@+id/btn_plus"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:src="@drawable/ic_add_circle"/>
+            <TextView
+                    android:id="@+id/tv_name_food"
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:textSize="15sp"
+                    android:gravity="center"/>
+
+            <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="#8e8e8e"
+                    app:cardCornerRadius="10dp">
+
+                <TextView
+                        android:id="@+id/tv_price_food"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="#ffff"
+                        android:gravity="center"/>
+
+            </android.support.v7.widget.CardView>
+
+        </LinearLayout>
+
+        <RelativeLayout
+                android:layout_width="120sp"
+                android:layout_height="40dp"
+                android:layout_marginRight="10dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true">
+
+            <RelativeLayout
+                    android:id="@+id/layout_pesan"
+                    android:layout_width="120sp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true">
+
+                <ImageView
+                        android:id="@+id/btn_minus"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:src="@drawable/ic_remove_circle"/>
+
+                <TextView
+                        android:id="@+id/tv_jumlah"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="24sp"
+                        android:gravity="center"
+                        android:textColor="@android:color/black"
+                        android:textStyle="italic"
+                        android:layout_centerInParent="true"/>
+
+                <ImageView
+                        android:id="@+id/btn_plus"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:src="@drawable/ic_add_circle"/>
+
+            </RelativeLayout>
+
+            <Button
+                    android:id="@+id/btn_pesan"
+                    style="@style/Base.Widget.AppCompat.Button.Colored"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pesan"/>
+
+        </RelativeLayout>
 
     </RelativeLayout>
-
-    <Button
-            android:id="@+id/btn_pesan"
-            android:layout_width="179dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="8dp"
-            android:layout_gravity="bottom|center"
-            style="@style/Base.Widget.AppCompat.Button.Colored"
-            android:text="@string/pesan"/>
 
 </android.support.v7.widget.CardView>
